<resources>
    <string name="app_name">TRVL</string>
    <string name="lblBanner">Where do you want to go?</string>
    <string name="autocompleteTextViewHint">Search...</string>
    <string name="lblFourStepsList">4 Steps To The Perfect Trip</string>
    <string name="step1">You tell us the destination, dates, and preferred ingredients of your dream trip.</string>
    <string name="step2">We match you with a travel specialist that will handle your inquiry.</string>
    <string name="step3">We compete for your business, offering expert advice and detailed proposals.</string>
    <string name="step4">You purchase the ideal itinerary after it gets refined to perfection with you..</string>
    <string name="japanCountry">Japan</string>
    <string name="italyCountry">Italy</string>
    <string name="introJapan">Uncover the secrets of Japan\'s dichotomy and acient culture through TRVL</string>
    <string name="introItaly">Italy tours offer the quintessential Italian vacation through exclusive access to the best experiences</string>
    <string name="aboutJapan">About Japan</string>
    <string name="aboutItaly">About Italy</string>
    <string name="japanAtAGlance">Japan At A Glance</string>
    <string name="italyAtAGlance">Italy At A Glance</string>
    <string name="textJapanAtAGlance">Because Japan has always been dedicated to the unique, it’s fitting that the country has a dazzling group of volcanic islands forming its own culture in the Pacific. Nothing is copied. Whether it’s ancient Buddhist temples, ebullient fish markets, or neighborhoods flashing with neon, the country screams of originality at every turn. Almost every city street is an attraction,the ethereal concoction of sights and sounds providing endless entertainment. But contrast iconic cities with snow-capped MountFuji or white Okinawa beaches that make tropical postcards look dull. Even the forests are inimitable, flickering between immensestretches of green bamboo, coy carp filled rivers, and delightful blossoms. Like the classic Manga comic, you have an effervescentcollection of stories to discover, each radiating a commitment to showcasing local culture.</string>
    <string name="textItalyAtAGlance">Because Italy has always been dedicated to the unique, it’s fitting that the country has a dazzling group of volcanic islands forming its own culture in the Pacific. Nothing is copied. Whether it’s ancient Buddhist temples, ebullient fish markets, or neighborhoods flashing with neon, the country screams of originality at every turn. Almost every city street is an attraction,the ethereal concoction of sights and sounds providing endless entertainment. But contrast iconic cities with snow-capped MountFuji or white Okinawa beaches that make tropical postcards look dull. Even the forests are inimitable, flickering between immensestretches of green bamboo, coy carp filled rivers, and delightful blossoms. Like the classic Manga comic, you have an effervescentcollection of stories to discover, each radiating a commitment to showcasing local culture.</string>
    <string name="uniqueExperiences">Unique Experiences</string>
    <string name="japanUniqueExpriences">Seasonal changes bring new blankets of artistic brilliance to the whole of Japan. Opening cherry blossoms provide a spring covering of delight, and many city streets are briefly dominated by a captivating full bloom. Fast forward to after the fall season and a magical transformation brings a new palate of color with the country flickering through a kaleidoscopic blend of profound reds and fading oranges as the maple trees explode into life.</string>
    <string name="italyUniqueExpriences">Seasonal changes bring new blankets of artistic brilliance to the whole of Italy. Opening cherry blossoms provide a spring covering of delight, and many city streets are briefly dominated by a captivating full bloom. Fast forward to after the fall season and a magical transformation brings a new palate of color with the country flickering through a kaleidoscopic blend of profound reds and fading oranges as the maple trees explode into life.</string>
    <string name="weatherAndWhenToGo">Weather and when to go</string>
    <string name="japanWeather">Japan changes dramatically through the seasons, from endless blankets of white snow to blooming cherry blossoms, tropical summer beaches to forest journeys across fallen leaves. Likewise, there are vast disparities between the northern mountains of Hokkaido and the Pacific Ocean tropics of Okinawa.</string>
    <string name="italyWeather">Italy changes dramatically through the seasons, from endless blankets of white snow to blooming cherry blossoms, tropical summer beaches to forest journeys across fallen leaves. Likewise, there are vast disparities between the northern mountains of Hokkaido and the Pacific Ocean tropics of Okinawa.</string>
    <string name="btnInquire">Inquire</string>
    <string name="hintEmail">email</string>
    <string name="hintPassword">password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignup">Sign up</string>
    <string name="loginFailed">Incorrect email or password</string>
    <string name="loginURL">http://localhost/trvl/api/user/login.php</string>
    <string name="emptyEmailOrPassword">Please Enter your email and your password</string>
    <string name="personalInfoTextView">Personal Information</string>
    <string name="hintFirstName">First name</string>
    <string name="hintLastName">Last name</string>
    <string name="hintConfirmPassword">Confirm password</string>
    <string name="hintPhone">Phone</string>
    <string name="hintDateOfBirth">Date Of Birth (YYYY-MM-DD)</string>
    <string name="hintCity">City</string>
    <string name="hintAddress">Address</string>
    <string name="hintNameOnCard">Name on card</string>
    <string name="hintPaymentInfo">Payment Information</string>
    <string name="hintcardNumber">Card number</string>
    <string name="hintExpirationDate">Expiration Date (YYYY-MM-DD)</string>
    <string name="hintCVV">CVV</string>
    <string name="hintBtnSignup">Sign Up</string>
    <string name="loginRespError">Something went wrong</string>
    <string name="loginRespFailed">Login Failed</string>
    <string name="apiLoginUrl">/trvl/api/user/login.php</string>
    <string name="signUpRespAllFieldsRequired">Some field(s) are empty</string>
    <string name="signupRespPassNoMatch">Passwords don\'t match</string>
    <string name="apiSignupUrl">/trvl/api/user/create_user.php</string>
    <string name="signupRespError">Something went wrong.</string>
    <string name="signupRespSuccess">Account created successfully.</string>
    <string name="prefJWTFile">trvlJWT</string>
    <string name="savedJWT">JWT</string>
    <string name="inquireStep1">Step 1: Tell Us about the trip you have in mind</string>
    <string name="hintTravelDate">Travel Date (YYYY-MM-DD)</string>
    <string name="inquireStep2">Step 2: Tell us about your travel style</string>
    <string name="apiValidateJWTUrl">/trvl/apI/JWT/validate_token.php</string>
    <string name="apiCreateInquiryUrl">/trvl/api/inquiry/create_inquiry.php</string>
    <string name="accountHomeInquiriesTextView">Your inquiries</string>
    <string name="apiGetUserInquiriesUrl">/trvl/api/user/get_inquiries.php</string>
    <string name="apiDeleteInquiryUrl">/trvl/api/inquiry/delete_inquiry.php</string>
    <string name="serverIP">http://192.168.1.110</string>
    <string-array name="gender">
        <item>Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
</resources>