<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:id="@+id/countryImage"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@drawable/italy">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:gravity="center_horizontal"
            android:paddingTop="16dp"
            android:paddingBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/countryName"
                android:layout_gravity="center_horizontal"
                android:fontFamily="verdana"
                android:text="@string/italyCountry"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/introCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:fontFamily="verdana"
                android:text="@string/introItaly"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/aboutCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="verdana"
                android:text="@string/aboutItaly"
                android:textColor="@color/grey"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/countryAtAGlance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="@string/italyAtAGlance"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/textCountryAtAGlance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="@string/textItalyAtAGlance"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/countryUniqueExperiences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="@string/uniqueExperiences"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/textUniqueExpreinces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="@string/italyUniqueExpriences"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/countryWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="@string/weatherAndWhenToGo"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/textWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="verdana"
                android:text="@string/italyWeather"
                android:textColor="@color/grey"
                android:textSize="16sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnInquire"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnInquire"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:onClick="inquire"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>